Build sidebar menu using bulma css

--- a/src/Tippy/Pages/Explorer.cshtml
+++ b/src/Tippy/Pages/Explorer.cshtml
@@ -3,4 +3,4 @@
 @{
 }
 
-<iframe src="/" style="border: none; height: calc(100vh - 80px); width: 100%;" title="Explorer"></iframe>
+<iframe src="/" class="explorer-container" title="Explorer"></iframe>
