Preper link tag helper

--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
                     General
                   </p>
                   <ul class="menu-list">
-                    <li><a href="/home" class="@Html.ActiveClass("/Home")">Dashboard</a></li>
-                    <li><a href="/explorer" class="@Html.ActiveClass("/Explorer")">Explorer</a></li>
+                    <li><a asp-page="/Home" class="@Html.ActiveClass("/Home")">Dashboard</a></li>
+                    <li><a asp-page="/Explorer"class="@Html.ActiveClass("/Explorer")">Explorer</a></li>
                   </ul>
                   <p class="menu-label">
                     Configuration
