Implement active link tag helper

--- a/src/Tippy/Pages/_ViewImports.cshtml
+++ b/src/Tippy/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 @using Tippy
-@using Tippy.Pages.Helpers
-@namespace Tippy.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@removeTagHelper Microsoft.AspNetCore.Mvc.TagHelpers.AnchorTagHelper, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Tippy
