Add jquery and jquery-validation to layout

--- a/src/Tippy/Pages/Explorer.cshtml
+++ b/src/Tippy/Pages/Explorer.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model Tippy.Pages.ExplorerModel
 @{
+    ViewData["Title"] = "Explorer";
 }
 
 <iframe src="/" class="explorer-container" title="Explorer"></iframe>
