--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title</title>
+    <title>@ViewData["Title"] - Tippy</title>
     <link rel="stylesheet" href="~/css/bulma.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <style>
@@ -26,7 +26,7 @@
                     Configuration
                   </p>
                   <ul class="menu-list">
-                    <li><a>TODO</a></li>
+                    <li><a asp-page="/Config/Index">Config</a></li>
                   </ul>
                 </aside>
             </div>
@@ -36,5 +36,10 @@
             </div>
         </div>
     </div>
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
