--- a/src/Tippy/Pages/Home.cshtml
+++ b/src/Tippy/Pages/Home.cshtml
@@ -4,4 +4,20 @@
     ViewData["Title"] = "Dashboard";
 }
 
-<h1>Dashboard</h1>
+<h1 class="title">Dashboard</h1>
+
+@if (TempData["Message"]?.ToString().Length > 0)
+{
+    <div class="notification is-success">
+        <button class="delete"></button>
+        <div>@TempData["Message"]</div>
+    </div>
+}
+
+<form method="post">
+    <div class="field is-grouped">
+        <div class="control">
+            <button class="button is-link">Restart node</button>
+        </div>
+    </div>
+</form>
