Show node running status, provide stop or restart feature

--- a/src/Tippy/Pages/Config/Index.cshtml
+++ b/src/Tippy/Pages/Config/Index.cshtml
@@ -24,9 +24,15 @@
         </div>
     </div>
 
+    <div class="field">
+        <div class="control">
+            <p class="help is-danger is-size-6">You need to <a asp-page="/Home" class="has-text-weight-semibold">restart the node</a> for the changes to take effect.</p>
+        </div>
+    </div>
+
     <div class="field is-grouped">
         <div class="control">
-            <button class="button is-link">Save</button>
+            <button class="button is-link is-small">Save</button>
         </div>
         <!--
           <div class="control">
