Implement reset node data feature

--- a/src/Tippy/Pages/Config/Index.cshtml
+++ b/src/Tippy/Pages/Config/Index.cshtml
@@ -32,7 +32,7 @@
 
     <div class="field is-grouped">
         <div class="control">
-            <button class="button is-link is-small">Save</button>
+            <button class="button is-primary">Save</button>
         </div>
         <!--
           <div class="control">
