Add logs page powered by Signalr
TODO: connect node process output

--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                   <ul class="menu-list">
                     <li><a asp-page="/Home">Dashboard</a></li>
                     <li><a asp-page="/Explorer">Explorer</a></li>
+                    <li><a asp-page="/Log">Logs</a></li>
                   </ul>
                   <p class="menu-label">
                     Configuration
