Format and show logs

--- a/src/Tippy/Pages/Shared/_SignalrScriptsPartial.cshtml
+++ b/src/Tippy/Pages/Shared/_SignalrScriptsPartial.cshtml
@@ -1,2 +1,3 @@
 ﻿<script src="~/lib/signalr/dist/browser/signalr.js"></script>
+<script src="~/lib/ansi_up/ansi_up.js"></script>
 <script src="~/js/log.js" asp-append-version="true"></script>
