--- a/src/Tippy/Pages/Log.cshtml
+++ b/src/Tippy/Pages/Log.cshtml
@@ -5,11 +5,7 @@
 
 <h1 class="title">Logs</h1>
 
-<div class="field">
-    <div class="control">
-        <textarea class="textarea is-primary" id="logList" rows="25" readonly></textarea>
-    </div>
-</div>
+<div class="log-box" id="log-box"></div>
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_SignalrScriptsPartial"); }
