Add project pages

--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     Configuration
                   </p>
                   <ul class="menu-list">
+                    <li><a asp-page="/Projects/Index">Projects</a></li>
                     <li><a asp-page="/Config/Index">Config</a></li>
                   </ul>
                 </aside>
