--- a/src/Tippy/Pages/Projects/Details.cshtml
+++ b/src/Tippy/Pages/Projects/Details.cshtml
@@ -1,49 +1,64 @@
 @page
 @model Tippy.Pages.Projects.DetailsModel
 
-@{
-    ViewData["Title"] = "Details";
-}
+@{ ViewData["Title"] = "Project details"; }
 
-<h1>Details</h1>
+<h1 class="title">Project details</h1>
 
-<div>
-    <h4>Project</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Project.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Project.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Project.Chain)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Project.Chain)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Project.NodeRpcPort)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Project.NodeRpcPort)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Project.NodeNetworkPort)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Project.NodeNetworkPort)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Project.IndexerRpcPort)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Project.IndexerRpcPort)
-        </dd>
-    </dl>
+<div class="field">
+    <div class="control">
+    <label class="label">
+        @Html.DisplayNameFor(model => model.Project.Name)
+    </label>
+        @Html.DisplayFor(model => model.Project.Name)
+    </div>
 </div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Project.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+<div class="field">
+    <div class="control">
+    <label class="label">
+        @Html.DisplayNameFor(model => model.Project.Chain)
+    </label>
+        @Html.DisplayFor(model => model.Project.Chain)
+    </div>
+</div>
+<div class="field">
+    <div class="control">
+    <label class="label">
+        @Html.DisplayNameFor(model => model.Project.NodeRpcPort)
+    </label>
+        @Html.DisplayFor(model => model.Project.NodeRpcPort)
+    </div>
+</div>
+<div class="field">
+    <div class="control">
+    <label class="label">
+        @Html.DisplayNameFor(model => model.Project.NodeNetworkPort)
+    </label>
+        @Html.DisplayFor(model => model.Project.NodeNetworkPort)
+    </div>
+</div>
+<div class="field">
+    <div class="control">
+    <label class="label">
+        @Html.DisplayNameFor(model => model.Project.IndexerRpcPort)
+    </label>
+        @Html.DisplayFor(model => model.Project.IndexerRpcPort)
+    </div>
+</div>
+<div class="field">
+    <div class="control">
+    <label class="label">
+        @Html.DisplayNameFor(model => model.Project.LockArg)
+    </label>
+        @Html.DisplayFor(model => model.Project.LockArg)
+    </div>
+</div>
+
+<div class="field is-grouped">
+    <div class="control">
+        <a asp-page="./Edit" asp-route-id="@Model.Project.ID" class="button is-primary">Edit</a>
+    </div>
+    <div class="control">
+        <a asp-page="./Index" class="button is-link is-light">Back</a>
+    </div>
 </div>
