Only initialize ckb with spec template for devnet

--- a/src/Tippy/Pages/Config/Index.cshtml
+++ b/src/Tippy/Pages/Config/Index.cshtml
@@ -19,8 +19,8 @@
 
     <div class="field">
         <div class="control">
-            <label asp-for="LockArg" class="label"></label>
-            <input asp-for="LockArg" class="input" placeholder="Lock Arg" />
+            <label asp-for="Unused" class="label"></label>
+            <input asp-for="Unused" class="input" placeholder="" />
         </div>
     </div>
 
