--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                   </p>
                   <ul class="menu-list">
                     <li><a asp-page="/Projects/Index">Projects</a></li>
-                    <li><a asp-page="/Config/Index">Config</a></li>
+                    <!--<li><a asp-page="/Config/Index">Config</a></li>-->
                   </ul>
                 </aside>
             </div>
