--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     General
                   </p>
                   <ul class="menu-list">
-                    <li><a asp-page="/Home">Dashboard</a></li>
+                    <li><a asp-page="/Home/Index">Dashboard</a></li>
                     <li><a asp-page="/Explorer">Explorer</a></li>
                     <li><a asp-page="/Log">Logs</a></li>
                   </ul>
