Change button color

--- a/src/Tippy/Pages/Projects/Index.cshtml
+++ b/src/Tippy/Pages/Projects/Index.cshtml
@@ -79,7 +79,7 @@
                     }
                 </td>
                 <td>
-                    <a asp-page="./Details" asp-route-id="@item.ID" class="button is-primary is-small is-outlined">
+                    <a asp-page="./Details" asp-route-id="@item.ID" class="button is-info is-small is-outlined">
                         <span>Details</span>
                         <span class="icon is-small">
                             <i class="fas fa-info-circle"></i>
